changes in docs
